Prevent horizontal overflow on html and body

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -20,6 +20,11 @@
   -webkit-text-size-adjust: 100%;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 body {
   display: flex;
   flex-direction: column;
